# druid

./: Cargo.toml
druid/: Cargo.toml
druid-shell/: Cargo.toml
druid-shell/examples/: perftest.rs
druid-shell/src/: lib.rs
druid-shell/src/mac/: mod.rs
druid/examples/: 7guis_counter.rs  7guis_temperature.rs  custom_widget.rs  shadow_play.rs  style.rs  svg.rs  too_long_list.rs
druid/examples/wasm/src/: examples
druid/examples/web/src/: lib.rs
druid/src/: app.rs  core.rs  env.rs  lib.rs
druid/src/tests/: harness.rs
druid/src/widget/: adapt.rs  container.rs  draw.rs  label.rs  list.rs  mod.rs  numeric_textbox.rs  spinner.rs  switch.rs  textbox.rs  widget_ext.rs
examples/: 7gui-counter.rs  7gui-crud.rs  7gui-temp.rs  calc.rs  custom_widget.rs  hello.rs  new-widgets.rs  scroll.rs  textbox.rs  textbox_demo.rs  widget_demo.rs
examples/bez_editor/: draw.rs  main.rs  pen.rs
src/: lib.rs  theme.rs
src/widget/: align.rs  button.rs  checkbox.rs  flex.rs  mod.rs  padding.rs  progress_bar.rs  scroll_column.rs  sizedbox.rs  slider.rs  textbox.rs
