[package]
name = "druid"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Data-oriented Rust UI design toolkit."
repository = "https://github.com/xi-editor/druid"
categories = ["gui"]
keywords = ["gui", "ui", "toolkit"]
edition = "2018"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[badges]
travis-ci = { repository = "xi-editor/druid" }

[dependencies]
piet-common = { git="https://github.com/futurepaul/piet", branch="feature-raqote-flag", features=["raq"] }
piet = { git="https://github.com/futurepaul/piet", branch="feature-raqote-flag" }
kurbo = "0.2.2"

[dependencies.druid-shell]
path = "druid-shell"
version = "0.2.0"
