[package]
name = "druid-shell"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Platform abstracting application shell used for druid toolkit."
repository = "https://github.com/xi-editor/druid"
categories = ["os::macos-apis", "os::windows-apis", "gui"]
edition = "2018"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]

piet = { git="https://github.com/futurepaul/piet", branch="feature-raqote-flag" }

lazy_static = "1.0"
time = "0.1.39"

[target.'cfg(target_os="windows")'.dependencies]
directwrite = "0.1.2"
direct2d = "0.2.0"
wio = "0.2"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.6"
features = ["d2d1_1", "dwrite", "winbase", "libloaderapi", "errhandlingapi", "winuser", "shellscalingapi", "shobjidl", "combaseapi", "synchapi", "dxgi1_3", "dcomp", "d3d11", "dwmapi", "wincon", "fileapi", "processenv", "winbase", "handleapi"]

[target.'cfg(all(target_os="macos", not(features="raqote"))'.dependencies]
cocoa = "0.18.4"
objc = "0.2.5"
core-graphics = "0.17.3"
cairo-rs = { version = "0.5.0", default_features = false, optional = true }
piet-common = { git="https://github.com/futurepaul/piet", branch="feature-raqote-flag", optional = true}

[target.'cfg(features="raqote-render")'.dependencies]
piet-common = { git="https://github.com/futurepaul/piet", branch="feature-raqote-flag", features=["raq"], optional = true }
raqote = { git="https://github.com/jrmuizel/raqote/", optional = true}

[features]
default = ["cairo-render"]
cairo-render = ["cairo-rs", "piet-common"]
raqote-render = ["raqote", "piet-common"]

[dev-dependencies]
kurbo = "0.2.2"
