[package]
authors = ["Raph Levien <raph.levien@gmail.com>"]
categories = ["os::macos-apis", "os::windows-apis", "gui"]
description = "Platform abstracting application shell used for druid toolkit."
edition = "2018"
license = "Apache-2.0"
name = "druid-shell"
readme = "README.md"
repository = "https://github.com/linebender/druid"
version = "0.6.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
rustdoc-args = ["--cfg", "docsrs"]

[features]
x11 = ["x11rb", "nix", "cairo-sys-rs"]

[dependencies]
# NOTE: When changing the piet or kurbo versions, ensure that
#       the kurbo version included in piet is compatible with the kurbo version specified here.
kurbo = "0.6.2"
piet-common = {git = "https://github.com/linebender/piet/", branch = "master", features = ["png"]}

anyhow = "1.0.31"
cfg-if = "0.1.10"
instant = {version = "0.1.4", features = ["wasm-bindgen"]}
keyboard-types = {version = "0.5.0", default_features = false}
lazy_static = "1.4.0"
log = "0.4.8"
time = "0.2.16"

# Optional dependencies
cairo-rs = {version = "0.8.1", default_features = false, optional = true}
cairo-sys-rs = {version = "0.9.2", default_features = false, optional = true}
gdk = {version = "0.12.1", optional = true}
gdk-sys = {version = "0.9.1", optional = true}
gio = {version = "0.8.1", optional = true}
glib = {version = "0.9.3", optional = true}
glib-sys = {version = "0.9.1", optional = true}
gtk = {version = "0.8.1", optional = true}
gtk-sys = {version = "0.9.2", optional = true}
nix = {version = "0.17.0", optional = true}
x11rb = {version = "0.6.0", features = ["allow-unsafe-code", "present", "randr", "xfixes"], optional = true}

[target.'cfg(target_os="windows")'.dependencies]
wio = "0.2.2"

[target.'cfg(target_os="windows")'.dependencies.winapi]
features = [
  "d2d1_1",
  "dwrite",
  "winbase",
  "libloaderapi",
  "errhandlingapi",
  "winuser",
  "shellscalingapi",
  "shobjidl",
  "combaseapi",
  "synchapi",
  "dxgi1_3",
  "dcomp",
  "d3d11",
  "dwmapi",
  "wincon",
  "fileapi",
  "processenv",
  "winbase",
  "handleapi",
]
version = "0.3.8"

[target.'cfg(target_os="macos")'.dependencies]
bitflags = "1.2.1"
cocoa = "0.20.1"
core-graphics = "0.19.0"
foreign-types = "0.3.2"
objc = "0.2.7"

# TODO(x11/dependencies): only use feature "xcb" if using X11
[target.'cfg(target_os="linux")'.dependencies]
cairo-rs = {version = "0.8.1", default_features = false, features = ["xcb"]}
gdk = "0.12.1"
gdk-sys = "0.9.1"
gio = "0.8.1"
glib = "0.9.3"
glib-sys = "0.9.1"
gtk = {version = "0.8.1", features = ["v3_20"]}
gtk-sys = "0.9.2"

[target.'cfg(target_arch="wasm32")'.dependencies]
js-sys = "0.3.40"
wasm-bindgen = "0.2.63"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
features = ["Window", "MouseEvent", "CssStyleDeclaration", "WheelEvent", "KeyEvent", "KeyboardEvent"]
version = "0.3.40"

[dev-dependencies]
piet-common = {git = "https://github.com/linebender/piet/", branch = "master", features = ["png"]}
simple_logger = {version = "1.6.0", default-features = false}
