[package]
authors = ["Raph Levien <raph.levien@gmail.com>"]
categories = ["gui"]
description = "Data-oriented Rust UI design toolkit."
edition = "2018"
keywords = ["gui", "ui", "toolkit"]
license = "Apache-2.0"
name = "druid"
readme = "README.md"
repository = "https://github.com/linebender/druid"
version = "0.6.0"

[package.metadata.docs.rs]
# The "svg" and "image" features have doc clashes that cause undefined output in docs.
# See https://github.com/rust-lang/cargo/issues/6313 for more information.
# Once cargo doc becomes smart enough to handle multiple versions of the same crate,
# the "svg" and "image" features should be enabled for the docs.rs output.
default-target = "x86_64-pc-windows-msvc"
features = ["im"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
svg = ["usvg", "harfbuzz-sys"]
x11 = ["druid-shell/x11"]

[dependencies]
druid-derive = {version = "0.3.1", path = "../druid-derive"}
druid-shell = {version = "0.6.0", path = "../druid-shell"}

fluent-bundle = "0.12.0"
fluent-langneg = "0.13.0"
fluent-syntax = "0.9.3"
fnv = "1.0.7"
instant = {version = "0.1.4", features = ["wasm-bindgen"]}
log = "0.4.8"
simple_logger = {version = "1.6.0", default-features = false}
unic-langid = "0.9.0"
unicode-segmentation = "1.6.0"
xi-unicode = "0.2.0"

# Optional dependencies
im = {version = "15.0.0", optional = true}
usvg = {version = "0.9.0", optional = true}
# We don't depend directly on harfbuzz-sys, it comes through usvg. But we need to pin
# the version, because the latest release of harfbuzz_rs is broken with harfbuzz-sys 0.5.
harfbuzz-sys = {version = "0.4", optional = true}
image = {version = "0.23.4", optional = true}

[target.'cfg(target_arch="wasm32")'.dependencies]
console_log = "0.2.0"

[dev-dependencies]
float-cmp = {version = "0.8.0", features = ["std"], default-features = false}
piet-common = {git = "https://github.com/linebender/piet/", branch = "master", features = ["png"]}
tempfile = "3.1.0"

[[example]]
name = "image"
required-features = ["image"]

[[example]]
name = "list"
required-features = ["im"]

[[example]]
name = "svg"
required-features = ["svg"]
